--- a/index.html
+++ b/index.html
@@ -4,18 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Login</title>
+    <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-auth.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="login.php" method="POST">
-            <label for="username">Usuário:</label>
-            <input type="text" id="username" name="username" required>
+        <form id="login-form">
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" required>
             <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" required>
             <button type="submit">Entrar</button>
         </form>
+        <p id="error-message"></p>
     </div>
+
+    <script>
+        // Configuração do Firebase
+        const firebaseConfig = {
+            apiKey: "SUA_API_KEY",
+            authDomain: "SEU_AUTH_DOMAIN",
+            projectId: "SEU_PROJECT_ID",
+            storageBucket: "SEU_STORAGE_BUCKET",
+            messagingSenderId: "SEU_MESSAGING_SENDER_ID",
+            appId: "SEU_APP_ID"
+        };
+
+        // Inicializando o Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // Função para login
+        const loginForm = document.getElementById('login-form');
+        const errorMessage = document.getElementById('error-message');
+
+        loginForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            // Realizando login com e-mail e senha
+            auth.signInWithEmailAndPassword(email, password)
+                .then(() => {
+                    // Login bem-sucedido
+                    window.location.href = 'welcome.html'; // Redireciona para a página de boas-vindas
+                })
+                .catch((error) => {
+                    // Exibe erro caso algo dê errado
+                    errorMessage.textContent = "Erro: " + error.message;
+                });
+        });
+    </script>
 </body>
 </html>
